<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class Cuidador extends Model
{
    protected $fillable = [
        'nombre',
        'especialidad',
    ];

    public function cuidador_animals()
    {
        return $this->hasMany('App\Models\Cuidador_Animal');
    }
}
