@startuml

class models.Animal{
    especie_id:integer
    recinto_id:integer
    actividad_id:integer
}
class models.Especie{
    nombre:string
}

class models.Recinto{
    capacidad:integer
}

class models.Cuidador{
    nombre:string
    especialidad:string
}
class models.Cuidador_Animal{
    cuidador_id:integer
    animal_id:integer
}
class models.Actividad{
    dia:string
    horario:string
}


class controllers.Animal{
    resource()

}
class controllers.Especie{
    resource()
}

class controllers.Recinto{
    resource()
}

class controllers.Cuidador{
    resource()

}
class controllers.Cuidador_Animal{
    resource()

}
class controllers.Actividad{
    resource()

}

models.Especie "1" -- "*" models.Animal
models.Recinto "1" -- "*" models.Animal
models.Cuidador "1" -- "*" models.Cuidador_Animal
models.Animal "1" -- "*" models.Cuidador_Animal
models.Actividad "1" -- "*" models.Animal


@enduml
